# django-iranian-cities

./: .gitignore  .pre-commit-config-ci.yaml  .pre-commit-config.yaml  .pylintrc  AUTHORS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Django_Iranian_Cities_Pytest_Guide.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  python-publish.yml  release.yml
docs/: conf.py  contributing.rst  index.rst  pytest_guide.rst  quick_start.rst  rules.rst  settings.rst  team.rst  usage.rst
iranian_cities/: admin.py  apps.py  checks.py  conf.py  constants.py  exc.py  fields.py  models.py
iranian_cities/data/: city.csv  county.csv  district.csv  province.csv  rural_district.csv
iranian_cities/management/commands/: generate_city.py
iranian_cities/migrations/: 0001_initial.py  0002_rename_shhahr_dehestan_shahr.py  0003_remove_dehestan_shahr.py  0004_remove_abadi_shhahr.py  0005_auto_20221004_0004.py  0006_alter_city_province_alter_county_province.py  0007_alter_city_table_comment_alter_county_table_comment_and_more.py  0008_alter_city_options_alter_county_options_and_more.py  0009_rename_iranian_cit_code_1c3b38_idx_sage_city_code_8db749_idx_and_more.py
iranian_cities/mixins/: __init__.py  base_inline.py  base_location.py  dynamic_permission.py  no_add_delete_change.py
tests/: conftest.py  constants.py
tests/admin/: test_formfield.py
tests/models/: test_code.py  test_code_unique.py  test_str.py
tests/settings/: test_admin_permissions.py  test_checks.py
tests/testapp/settings/: asgi.py  settings.py  urls.py  wsgi.py
